--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,10 +1,10 @@
 {
   "CONTRACT_ADDRESS": "0xfac12d04f3519b2230569fef6c57ebbb714d7db8",
-  "SCAN_LINK": "https://rinkeby.etherscan.io/address/0xfac12d04f3519b2230569fef6c57ebbb714d7db8",
+  "SCAN_LINK": "https://polygonscan.com/address/0x3c2c82868f682C0A26FDF779C1F36dc753532a07#code",
   "NETWORK": {
-    "NAME": "Rinkeby",
-    "SYMBOL": "Eth",
-    "ID": 4
+    "NAME": "Polygon",
+    "SYMBOL": "MATIC",
+    "ID": 137
   },
   "NFT_NAME": "#NuncaMas",
   "SYMBOL": "NM30000",
